<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_weight="1">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".QuestionMakeActivity" >

    <TextView
        android:id="@+id/categoryMakeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/category_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/categoryMakeLabel"
        android:layout_below="@+id/categoryMakeLabel"
        android:background="@drawable/category_spinner_color"
        android:drawSelectorOnTop="true"
        android:entries="@array/category_list"
        android:prompt="@string/spinnerprompt" />

    <TextView
        android:id="@+id/questionMakeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/categorySpinner"
        android:layout_below="@+id/categorySpinner"
        android:layout_marginTop="16dp"
        android:text="@string/question_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/questionSmallLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/questionMakeLabel"
        android:layout_alignBottom="@+id/questionMakeLabel"
        android:layout_toRightOf="@+id/questionMakeLabel"
        android:text="@string/questionSmallLabel"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/questionTexitField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/questionMakeLabel"
        android:layout_below="@+id/questionMakeLabel"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        android:minWidth="275dp"
        android:hint="@string/question_text_hint"
        android:maxLength="140"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/answerMakeTextField" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/answerMakeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/questionTexitField"
        android:layout_below="@+id/questionTexitField"
        android:layout_marginTop="16dp"
        android:text="@string/answer_make_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/answerMakeTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answerMakeLabel"
        android:layout_alignRight="@+id/questionTexitField"
        android:layout_below="@+id/answerMakeLabel"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/answer_make_text_hint"
        android:maxLength="30"
        android:singleLine="true"
        android:nextFocusDown="@+id/descriptionMakeTextField" />

    <TextView
        android:id="@+id/descriptionMakeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answerMakeTextField"
        android:layout_below="@+id/answerMakeTextField"
        android:layout_marginTop="17dp"
        android:text="@string/description_make_label"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/descriptionMakeTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/descriptionMakeLabel"
        android:layout_below="@+id/descriptionMakeLabel"
        android:background="@drawable/rounded_corner"
        android:gravity="top"
        android:ems="10"
        android:minHeight="70dp"
        android:minWidth="275dp"
        android:hint="@string/description_text_hint"
        android:maxLength="140" />

    <TextView
        android:id="@+id/answerSmallLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/answerMakeLabel"
        android:layout_alignBottom="@+id/answerMakeLabel"
        android:layout_toRightOf="@+id/answerMakeLabel"
        android:text="@string/answer_small_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/descriptionSmallLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/descriptionMakeLabel"
        android:layout_alignBottom="@+id/descriptionMakeLabel"
        android:layout_alignLeft="@+id/answerSmallLabel"
        android:text="@string/description_small_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

</RelativeLayout>
</ScrollView>