<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnswerResultActivity" >

    <ImageView
        android:id="@+id/AnswerFlagView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/answer_flag_view" />

    <TextView
        android:id="@+id/AnswerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/AnswerText"
        android:layout_marginLeft="30dp"
        android:text="@string/answer_label"
        android:textColor="@color/white" />
    
    <TextView
        android:id="@+id/AnswerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AnswerFlagView"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="50dp"
        android:layout_alignRight="@+id/descriptionAnswerScrollView"
        android:layout_alignLeft="@+id/AnswerLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/red" />
    
    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AnswerText"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/description_make_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <ScrollView 
        android:id="@+id/descriptionAnswerScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionLabel"
        android:layout_above="@+id/CategoryBackButton"
        android:layout_marginRight="13dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/rounded_corner"
        android:fillViewport="true" >
        
            <TextView
                android:id="@+id/DescriptionText"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
    </ScrollView>

    <Button
        android:id="@+id/CategoryBackButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="25dp"
        android:text="@string/category_back_button_text"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/AnswerNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/CategoryBackButton"
        android:layout_alignTop="@+id/CategoryBackButton"
        android:layout_marginLeft="35dp"
        android:text="@string/answer_next_button_text"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>