<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <ImageView
        android:id="@+id/question_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/question_label"
        android:src="@drawable/question_area" />

    <ScrollView 
        android:id="@+id/questionScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/question_area"
        android:layout_alignRight="@+id/question_area"
        android:layout_alignBottom="@+id/question_area"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/question_area"
        android:fillViewport="true" >
        
            <TextView
                android:id="@+id/question"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceMedium" />
    </ScrollView>

    <TextView
        android:id="@+id/answerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/question_area"
        android:layout_below="@+id/question_area"
        android:layout_marginTop="38dp"
        android:text="@string/single_answer_label"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:focusable="true"
        android:focusableInTouchMode="true" >
        <requestFocus />
    </TextView>

    <EditText
        android:id="@+id/answerEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answerLabel"
        android:layout_alignRight="@+id/question_area"
        android:layout_below="@+id/answerLabel"
        android:layout_marginTop="14dp"
        android:background="@drawable/rounded_corner"
        android:singleLine="true"
        android:hint="@string/answer_make_text_hint"
        android:ems="10" />

    <TextView
        android:id="@+id/answerCheckLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answerEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/single_answer_check_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/singleAnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answerCheckLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/single_answer_button"
        android:textColor="@color/white" />

</RelativeLayout>